--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_svg: ^1.0.3
   google_fonts: ^2.3.1
   floating_bottom_navigation_bar: ^1.5.2
+  animated_splash_screen: ^1.2.0
+
 
 
 
@@ -61,4 +63,4 @@ fonts:
         - asset: assets/fonts/DIN Condensed Bold.ttf
 
 
- 
+
