--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   google_fonts: ^2.3.1
   floating_bottom_navigation_bar: ^1.5.2
   animated_splash_screen: ^1.2.0
+  lottie: ^1.3.0
+
 
 
 
