--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   floating_bottom_navigation_bar: ^1.5.2
   animated_splash_screen: ^1.2.0
   lottie: ^1.3.0
+  cloud_firestore: ^3.1.12
+  path_provider: ^2.0.9
+  firebase_auth: ^3.3.14
+  image_picker: ^0.8.5
+  
 
 
 
