--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_auth: ^3.3.14
   image_picker: ^0.8.5
   hidden_drawer_menu: ^3.0.1
+  tflite: ^1.1.2
+  percent_indicator: ^3.4.0
   
 
 
